styles/styles.css
/* ... */
.footnote .css{
    transform: scale(1.6);
}

.footnote .html5{
    margin-left: 0.5rem;
    position: relative;
    transform: scale(1.4);
}

.footnote .js{
    margin-right: 0rem;
    transform: translateY(0.2rem);
}

.footnote #header{
    font-size: 2.0rem;
    color:#fff;
}

.inner__container{
    /*using flexbox, the flex direction matters. To align items along the main axis
    there is justify content. To align along the cross axis there is align-items, align-content
    and align-self*/
    /*If flex direction is column the main axis is vertical, and cross axis is horizontal. For 
    flex direction of row the main axis is horizontal, cross is vertical */
    gap: 2rem;
    display: flex;
    flex-direction: column;
    align-items: start;
}

.inner__container .input__field{
    width: 100%;
    height: 4rem;
    display: flex;
    flex-direction: row;
    color: #fff;
    font-size: 3rem;
    justify-content: center;
}

.start__button{
    position: relative;
    background: transparent;
    background-color: transparent;
    width: 8rem;
    height: 60%;
    border: 0.2rem solid #131313;
    border-radius: 0.25rem;
    font-size: 2rem;
    color: white;
    overflow: hidden;
    opacity: 0;
    z-index: -1;
}

.start__button::after{
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 2.5rem;
    background: radial-gradient(circle, #10c0e8a1, transparent);
    opacity: 0;
    transition: opacity 0.3s;
    z-index: 0;
}

.start__button:hover{
    z-index: 1;
    background-color: #10c0e8;
    color: black;
    box-shadow: 0 0 1rem #10c0e8, 0 0 4rem #10c0e8, 0 0 10rem #10c0e8;
}

.start__button:hover::before{
    opacity: 1;
}


.about__section .back__button{
    margin: 1rem;
    position: absolute;
    right: 0%;
    top: 0%;
    width: 3.5rem;
    height: 3.5rem;
    background:#10c0e8;
}

.projects__section .back__button{
    position: absolute;
    margin: 1rem;
    right: 0%;
    top: 0%;
    width: 4rem;
    height: 4rem;
    background:#10c0e8;
}

.skills__section #top__content .back__button{
    position:absolute;
    right: 0%;
    width: 4rem;
    height: 4rem;
    background:#10c0e8;
}

.back__button{
    position: relative;
    border-radius: 0.2rem;
    border: 0.2rem solid #131313;

    animation: squishButton 0.5s linear infinite;
    animation-play-state: paused;
    
}

.cross{
    position: absolute;
    top: 45%;
    left: -5%;
    width: 100%;
    height: 100%;
}

.back__button .cross #cross__1{
    position: relative;
    left: 15%;
    display: block;
    width: 80%;
    height: 10%;
    background:#131313;
    transform: rotate(40deg);
    border-radius:25%;

}

.back__button .cross #cross__2{
    position: relative;
    bottom: 10%;
    left: 15%;
    display: block;
    width: 80%;
    height: 10%;
    background: #131313;
    transform: rotate(-40deg);
    border-radius:25%;
}

@keyframes squishButton{
    0%{
        transform: scale(1.0);
    }

    20%{
        transform: scale(0.8);
    }

    60%{
        transform: scale(1.1);
    }

    100%{
        transform: scale(1.0);
    }
}


.about__section{
    z-index:-1;
    opacity: 0;

    position:absolute;
    height: 80%;
    width: fit-content;
    background: inherit;
    border: 0.3rem dashed #131313;
    display: flex;
    flex-direction: row;
    padding: 2rem;
    color: #fff;
    overflow-y: auto;
    box-shadow: 0 0 0.9rem 0.2rem #009cff, inset 0 0 0.9rem 0.2rem #009cff;
}

.about__section::-webkit-scrollbar{
    display: none;
}
/* hide page scrollbar */
html { scrollbar-width: none; } /* Firefox */
body { -ms-overflow-style: none; } /* IE and Edge */
body::-webkit-scrollbar, body::-webkit-scrollbar-button { display: none; } /* Chrome */
/* end hide page scrollbar */


.about__section #content{
    display: flex;
    flex-direction: column;
    /* justify-content: space-evenly; */
    gap: 1rem;
    height: 100%;
    width: 100%;
    position:relative;
    top: 0%;
    left: 0%;
    padding: 1rem;
    font-size: 1.5rem;
    min-height: fit-content;
}

.profile__photo{
    position: relative;
    width: min(18rem, 100%);
    height: min(25rem,80%);
    /* background-image: url("../images/project_images/photo.jpg"); */
    /* Add border-radius if you want rounded corners */
    border-radius: 0.5rem;
    overflow: hidden;
}

.profile__photo img{
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    
}

/*focus on the about box wrapper, and the boxes themselves.*/
#content #profile{
    height: 20rem;
    width: 15rem;
    background:transparent;
}


.about__box__wrapper{
    width: 100%;
    height: 100%;
    gap: 2rem;
    display: flex;
    flex-wrap: wrap;
}

.about__box__wrapper .row{
    width: 100%;
    display: flex;
    gap: 3rem;
    padding: 1rem;
}

.about__box{
    position: relative;
    padding: 2rem;
    width: 100%;
    height: fit-content;
    background: #131313;
    border:0.5rem solid #131313;
    flex: 1;
    opacity: 0;
    inset: 1px;
    animation-play-state: paused;
    transition: all 1s ease;
}

#profile_container{
    position: relative;
    width: 100%;
    height: fit-content;
    border: 10px solid #009cff;
}

.about__box .about__box__cover{
    position: relative;
    background:#131313;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0%;
    left: 0%;
    inset: 1px;
    opacity: 1;
}

.about__box span::after{
    z-index:-1;
    content: '';
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    transform: translateX(-0.5rem) translateY(-0.5rem);
    background:repeating-conic-gradient(from var(--gradient-angle), #00eaff 0%, #00eaff 10%, transparent 10%, transparent 50%);


    animation: aboutBoxBorderTrace 2s linear infinite;
}
/* ... */

